src/test/testData/kubernetes/KUBE008/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: nginx-selinux-container
spec:
  securityContext:
    seLinuxOptions:
      user: <error descr="Setting the SELinux type is restricted, and setting a custom SELinux user or role option is forbidden.">"system_u"</error>
      role: <error descr="Setting the SELinux type is restricted, and setting a custom SELinux user or role option is forbidden.">"system_r"</error>
      type: <error descr="Setting the SELinux type is restricted, and setting a custom SELinux user or role option is forbidden.">"spc_t"</error>
  containers:
    - name: nginx
      image: nginx:1.29-alpine
      ports:
        - containerPort: 80
      securityContext:
        seLinuxOptions:
          user: <error descr="Setting the SELinux type is restricted, and setting a custom SELinux user or role option is forbidden.">"system_u"</error>
          role: <error descr="Setting the SELinux type is restricted, and setting a custom SELinux user or role option is forbidden.">"system_r"</error>
          type: <error descr="Setting the SELinux type is restricted, and setting a custom SELinux user or role option is forbidden.">"spc_t"</error>